apps/portafolio/base/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: portafolio
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
