apps/portafolio/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service  # Nombre que usarás en Laravel (.env)
  namespace: portafolio  # Asegúrate de que coincida con tu namespace
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP  # Accesible solo dentro del cluster
