apps/portafolio/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1 # Para Traefik
kind: IngressRoute
metadata:
  name: ingressroute-laravel
  namespace: portafolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`migbertweb.xyz`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: myportafolio-tls
